<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.mohit.sunshine.app">
    <com.example.mohit.sunshine.app.LocationEditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"
        app:minLength="3" />

    <ListPreference
        android:defaultValue="@string/pref_temperature_default"
        android:entries="@array/pref_unit_entries"
        android:entryValues="@array/pref_unit_entry_values"
        android:key="@string/pref_temperature_key"
        android:title="@string/pref_temperature_label" />

    <ListPreference
        android:defaultValue="@string/pref_art_pack_sunshine"
        android:entries="@array/pref_art_pack_options"
        android:entryValues="@array/pref_art_pack_values"
        android:key="@string/pref_art_pack_key"
        android:title="@string/pref_art_pack_label" />

    <CheckBoxPreference
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />
</PreferenceScreen>